fixed alignment for profile photo and the images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@ body{
 .main-header{
         color: white;
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
         background-color: rgb(85, 83, 197);
         border-style: solid;
         border-width: 5px;
@@ -17,22 +18,22 @@ body{
         padding: 30px;
         margin: auto;
         width: 100%;
-        height: 400px;
+        height: 30rem;
         
 }
 
-
-.h1{
-    text-align: center;
-    font-size: large;
-    
+.img-container{
+    display:flex;
+    align-items: flex-start;
 }
 
-.float-right{
-    float: right;
-    margin: 30px;
-    
+
+.about-me-wrapper{
+    align-items: center;
+    display: flex;
+
 }
+
 .about-me {
     display: flex;
     flex-wrap: wrap;
@@ -62,14 +63,35 @@ aside{
     padding: 10px;
 }
 
-.project-1 img,
-.project-2 img,
-.project-3 img,
-.project-4 img{
-    display: grid;
+.project-wrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
 }
 
-@media screen and (max-width 768px){
+
+.placeholder-img{
+    background-image: url("../images/appscreen.jpg");
+    width: 250px;
+    height:300px;
+    background-repeat: no-repeat;
+    object-fit: contain;
+    text-decoration: none;
+}
+
+.placeholder-img h4{
+    display: flex;
+    justify-content: center;
+    font-size: large;
+    color: antiquewhite;
+}
+
+
+
+
+@media screen and (max-width: 768px){
     nav{
             flex-direction: column;
     }
